# koe

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  DESIGN_WINDOWS.md  Makefile  README.md  README.zh-CN.md
.cargo/: config.toml
.github/scripts/: package-app.sh
.github/workflows/: release.yml
KoeApp/: project.yml
KoeApp/Koe/: Info.plist
KoeApp/Koe/AppDelegate/: SPAppDelegate.m  SPAppDelegateLogicTests.m
KoeApp/Koe/Audio/: SPAudioCaptureManager.h  SPAudioCaptureManager.m  SPAudioDeviceManager.h  SPAudioDeviceManager.m
KoeApp/Koe/Bridge/: SPRustBridge.h  SPRustBridge.m
KoeApp/Koe/Hotkey/: SPHotkeyMonitor.h  SPHotkeyMonitor.m
KoeApp/Koe/Localization/: SPLocalization.h  SPLocalization.m
KoeApp/Koe/Overlay/: SPOverlayPanel.h  SPOverlayPanel.m
KoeApp/Koe/Permissions/: SPPermissionManager.h  SPPermissionManager.m
KoeApp/Koe/SetupWizard/: SPSetupWizardWindowController.h  SPSetupWizardWindowController.m
KoeApp/Koe/StatusBar/: SPStatusBarManager.m
KoeWin/: .gitignore  CMakeLists.txt  Makefile  README.md
KoeWin/src/: app.cpp  app.h  audio.cpp  audio.h  audio_device.cpp  audio_device.h  bridge.cpp  bridge.h  clipboard.cpp  clipboard.h  cue.cpp  cue.h  history.cpp  history.h  hotkey.cpp  hotkey.h  main.cpp  overlay.cpp  overlay.h  paste.cpp  paste.h  tray.cpp  tray.h
docs/: appcast-mlx.xml  appcast.xml  release-signing.md  update-feed.json
koe-asr/: Cargo.toml
koe-asr/src/: aliyun.rs  config.rs  doubao.rs  doubaoime.rs  lib.rs  mlx.rs  qwen.rs  transcript.rs
koe-asr/tests/: api_test.rs  transcript_test.rs
koe-cli/: Cargo.toml
koe-core/: Cargo.toml  cbindgen.toml
koe-core/src/: config.rs  ffi.rs  lib.rs  model_manager.rs  prompt.rs
koe-core/src/llm/: mlx.rs  (+2 more)
scripts/: trace-config-writes.sh
(+20 files in other folders)
